# ftd

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
cmake/: CppStandard.cmake  Submodule.cmake
cmake/fectch/: AddBoost.cmake  AddCatch2.cmake  AddFmt.cmake  AddSpdlog.cmake
include/ftd/: Charset.h  String.h
include/ftd/container/: Heap.h
include/ftd/net/: Acceptor.h  Connector.h  Endpoint.h  Socket.h  Type.h
include/ftd/utility/: Charset.h  EnumOperator.h  FunctionWrapper.h  Log.h  Noncopyable.h  Singleton.h  String.h  ThreadPool.h  Timer.h
src/: CMakeLists.txt  Config.h.in
src/net/: Endpoint.cpp  Socket.cpp
src/net/posix/: Cast.cpp  Cast.h  Error.cpp  Error.h  PosixSocket.cpp  PosixSocket.h
src/utility/: Log.cpp  ThreadPool.cpp
src/utility/logger/: SpdLogger.cpp  SpdLogger.h
test/: CMakeLists.txt  test_endpoint.cpp  test_log.cpp  test_socket.cpp  test_threadpool.cpp  test_timer.cpp
